--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tsconfig/node-ts": "^23.6.1",
     "@tsconfig/node24": "^24.0.1",
     "@types/node": "^24.5.1",
+    "typescript": "^5.9.2",
     "vite": "^7.1.5",
     "vite-plugin-checker": "^0.10.3"
   },
