--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "typedoc-plugin-icp-docs",
   "version": "0.0.1",
-  "description": "Build Markdown docs to be published to js.icp.build",
+  "description": "Build Markdown docs to be published on js.icp.build",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
@@ -27,7 +27,9 @@
     "codestyle:fix": "biome check --write"
   },
   "dependencies": {
-    "commander": "^14.0.1",
+    "commander": "^14.0.1"
+  },
+  "peerDependencies": {
     "typedoc": "^0.28.13",
     "typedoc-plugin-frontmatter": "^1.3.0",
     "typedoc-plugin-markdown": "^4.8.1"
