--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typedoc-plugin-icp-docs",
+  "name": "@dfinity/typedoc-plugin-icp-docs",
   "version": "0.0.1",
   "description": "Build Markdown docs to be published on js.icp.build",
   "license": "Apache-2.0",
