--- a/.github/workflows/codestyle.yml
+++ b/.github/workflows/codestyle.yml
@@ -10,16 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v4
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
 
       - name: Setup PNPM
         uses: dfinity/ci-tools/actions/setup-pnpm@main
 
       - name: Check JS Codestyle
         run: pnpm codestyle:check
-
-      - name: Check Rust Linting
-        run: cargo clippy
-
-      - name: Check Rust formatting
-        run: cargo fmt -- --check
