--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "icp",
     "internet-computer"
   ],
-  "private": true,
   "type": "module",
   "exports": {
     ".": "./dist/index.js"
@@ -52,5 +51,6 @@
   },
   "engines": {
     "node": ">=22"
-  }
+  },
+  "packageManager": "pnpm@10.13.1"
 }
