--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "commander": "^14.0.1"
   },
   "peerDependencies": {
-    "typedoc": "^0.28.13",
-    "typedoc-plugin-frontmatter": "^1.3.0",
-    "typedoc-plugin-markdown": "^4.8.1"
+    "typedoc": "^0.28.x",
+    "typedoc-plugin-frontmatter": "^1.3.x",
+    "typedoc-plugin-markdown": "^4.8.x"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.4",
