--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Build NPM package
         run: pnpm build
 
-      # - name: Generate release notes
-      #   uses: dfinity/ci-tools/actions/generate-release-notes@main
+      - name: Generate release notes
+        uses: dfinity/ci-tools/actions/generate-release-notes@main
 
       - name: Publish to npm
         env:
