chore: removes workflow_dispatch and reverts #10 (#11)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,6 @@
 name: release
 
 on:
-  workflow_dispatch:
   push:
     tags:
       - '[0-9]+.[0-9]+.[0-9]+'
@@ -33,8 +32,8 @@ jobs:
       - name: Build NPM package
         run: pnpm build
 
-      # - name: Generate release notes
-      #   uses: dfinity/ci-tools/actions/generate-release-notes@main
+      - name: Generate release notes
+        uses: dfinity/ci-tools/actions/generate-release-notes@main
 
       - name: Publish to npm
         env:
